Date	Added

12/19
	* Fixed some SQL queries crashing char server [davidsiaw]

12/18
	* Added several PID GM commands, thanks to Dino9021 [nsstrunks]
	* Storage was merging items incorrectly [Mousejstr]
	* eliminated a uninitialized var when using afm maps [MouseJstr]
	* Added concept of dirty storage to reduce saves/load
	  to the char server (do a clean build!) [MouseJstr]
	* Eliminated storage_storageopen2 as unused [MouseJstr]
	* Switched to account2storage2() whenever possible
	  to eliminate the possibility of saving empty storage
	  back to the character server (storage wipes) [MouseJstr]
	* Made it save storage as soon as you close the storage
	  window to reduce possibility of loss/abuse [MouseJstr]
12/17
	* Added #item [MC Cameri]
	* Added #storagelist, removed @charstoragelist [MC Cameri]
	* db.c: Fixed probs with OnInit, OnTime, and etc NPC probs
	  Just reverted it back. [Lupus]
	* Fixed warning message in db.c line 445 [MC Cameri]
	* Added #effect, removed @chareffect [MC Cameri]
        * Reverted a change in map.c causing problems, sorry >.< [celest]
        * Updated Sphere Mine - it'll now move in the opposite direction if
          being hit by its master [celest]
        * Updated Wind Walk [celest]
	* Fixed skill #301 causing crashes [MouseJstr]
	* Fixed documentation error on gm_skills_unconditionl [MouseJstr]
	* added @grind test command.. only for testing [MouseJstr]
	* Added clearweather to the atcommand configuration file. [nsstrunks]

12/16
        * Added a fix for AFM loading, thanks to Pete [celest]
        * Updated maximum levels for supernovice to 99 [celest]
        * Updated supernovice jobexp table - should be same from 50 onwards [celest]
        * Corrected maximum job level checking in @joblvup and @charjob [celest]
        * Added the new spell scrolls, thanks to Landarma [celest]
        * Corrected a few skills, thanks to orn [celest]
        * Corrected Extremity Fist to not require Explosion Spirits when being used