@@ -1,3 +1,6 @@
+#ifndef COMMON_UTILS_H
+#define COMMON_UTILS_H
+
 
 #ifndef NULL
 #define NULL (void *)0
@@ -31,3 +34,18 @@
   if (!((result) = (type *) realloc ((result), sizeof(type) * (number))))\
       { printf("SYSERR: realloc failure"); abort(); } } while(0)
 
+struct StringBuf {
+	char *buf_;
+	char *ptr_;
+	unsigned int max_;
+};
+
+extern struct StringBuf * StringBuf_Malloc();
+extern void StringBuf_Init(struct StringBuf *);
+extern int StringBuf_Printf(struct StringBuf *,const char *,...);
+extern int StringBuf_Append(struct StringBuf *,const struct StringBuf *);
+extern char * StringBuf_Value(struct StringBuf *);
+extern void StringBuf_Destroy(struct StringBuf *);
+extern void StringBuf_Free(struct StringBuf *);
+
+#endif
